[package]
name = "cargo-incremental"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
license = "Apache-2.0/MIT"
documentation = "A tool for using and testing rustc's incremental compilation support"
repository = "http://github.com/nikomatsakis/cargo-incremental/"

[dependencies]
docopt = "0.6.82"
git2 = "0.4.4"
regex = "0.1.73"
rustc-serialize = "0.3.19"
progress = "0.2"
log = "0.3"
env_logger = "0.3"
